# ntex-test

./: .env  Cargo.toml
migrations/2024-06-18-075707_create_tables/: up.sql
src/: main.rs  schema.rs  types.rs
src/controller/: base_product.rs  company.rs  mod.rs  product.rs
src/dao/: company.rs  mod.rs
src/entity/: admin.rs  base_product.rs  company.rs  custom.rs  ledger.rs  mod.rs  operator.rs  order.rs  product.rs  role.rs  salesman.rs
src/models/: mod.rs  response.rs
src/models/entity/: admin.rs  base_product.rs  company.rs  custom.rs  ledger.rs  operator.rs  order.rs  product.rs  role.rs  salesman.rs
src/models/param/: company.rs  mod.rs
src/models/query/: company.rs  mod.rs
src/service/: company.rs
