[package]
name = "travel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web框架
ntex = { version = "2.0", features = ["tokio"] }
# web跨域
ntex-cors = { version = "2.0.0" }
# 数据库
diesel = { version = "2.1.5", features = ["mysql", "r2d2", "chrono", "bigdecimal"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
#serde_qs = "0.13.0"
# 环境变量
dotenv = "0.15.0"
# logger
env_logger = "0.11.0"
# jwt
jsonwebtoken = "9.3"
# uuid
uuid = { version = "1.4.0", features = ["serde", "v4"] }
# 时间
chrono = { version = "0.4.35", features = ["serde"] }
# 金钱类型
bigdecimal = "0.4.2"
#thiserror = "1.0.61"
#futures = "0.3.30"
#futures-util = "0.3.30"